Fixed spacing issues on index.html just need to do labels then I am finished with the exception of about

--- a/weekOneProject/styles.css
+++ b/weekOneProject/styles.css
@@ -114,19 +114,21 @@ button {
 }
 
 
-}
+
 .photos1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
-.photos1>img {
-  margin: .5em;
+  margin: auto;
 }
 .photos2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: auto;
+}
+.photos1>img {
+  margin: .5em;
 }
 .photos2>img {
   margin: .5em;
